Fixing alignment
Removed styles for the logout button and username alignment.

--- a/form.css
+++ b/form.css
@@ -6,12 +6,6 @@
   font-weight: bold;
 }
 
-/*formats the div for the logout button and username*/
-.center2 {
-  display: flex;
-  justify-content: left;
-}
-
 /*formats everyting belwo the logout button and username*/
 body {
   position: relative;
